# monte-sc2

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build-ladder.sh  ramps aie.txt  ramps.txt
src/: Actions.cpp  Actions.h  Api.cpp  Api.h  AttackSquad.cpp  Bot.cpp  Bot.h  BuildingManager.cpp  BuildingManager.h  BuildingPlacer.cpp  BuildingPlacer.h  CMakeLists.txt  CombatCommander.cpp  CombatCommander.h  Debug.cpp  Debug.h  GameObject.cpp  GameObject.h  InfluenceMap.cpp  InfluenceMap.h  InformationManager.cpp  InformationManager.h  Logger.cpp  Logger.h  Manager.h  Mapper.cpp  Mapper.h  PlacementTree.cpp  PlacementTree.h  ProductionManager.cpp  ProductionManager.h  Ramp.cpp  Ramp.h  ScoutManager.cpp  ScoutManager.h  Squad.cpp  Squad.h  Strategy.cpp  Strategy.h  StrategyTools.h  (+7 more)
src/combat/: AttackSquad.cpp  AttackSquad.h  CombatTools.h  GameObject.cpp  GameObject.h  InfluenceMap.cpp  InfluenceMap.h  MicroManager.cpp  MicroManager.h  Squad.cpp  Squad.h
src/combat/micro/: BioManager.cpp  BioManager.h  MicroManager.cpp  MicroManager.h
src/emptybot/: EmptyBot.cpp  EmptyBot.h
src/micro/: BioManager.cpp  BioManager.h  MicroManager.h  Unit.h
src/strategies/: MarinePush.cpp  MarinePush.h
~/.blizzard/telemetry/~/.blizzard/telemetry/: S2-2820181456.fcr
